--- a/rest_project/requirements.txt
+++ b/rest_project/requirements.txt
@@ -1,2 +1,50 @@
+absl-py==0.7.0
+astor==0.7.1
+certifi==2018.11.29
+chardet==3.0.4
+cycler==0.10.0
+decorator==4.3.2
+dj-database-url==0.5.0
 Django==2.1.5
-users==1.0.dev0
+django-crispy-forms==1.7.2
+docopt==0.6.2
+gast==0.2.2
+grpcio==1.18.0
+gunicorn==19.9.0
+h5py==2.9.0
+idna==2.8
+ipython-genutils==0.2.0
+jsonschema==2.6.0
+jupyter-core==4.4.0
+Keras==2.2.4
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
+kiwisolver==1.0.1
+Markdown==3.0.1
+matplotlib==3.0.2
+nbformat==4.4.0
+numpy==1.16.1
+pandas==0.24.1
+Pillow==5.4.1
+pipreqs==0.4.9
+plotly==3.6.0
+protobuf==3.6.1
+pyparsing==2.3.1
+python-dateutil==2.8.0
+pytz==2018.9
+PyYAML==3.13
+requests==2.21.0
+retrying==1.3.3
+scikit-learn==0.20.2
+scipy==1.2.0
+seaborn==0.9.0
+six==1.12.0
+sklearn==0.0
+tensorboard==1.12.2
+tensorflow==1.12.0
+termcolor==1.1.0
+traitlets==4.3.2
+urllib3==1.24.1
+Werkzeug==0.14.1
+whitenoise==4.1.2
+yarg==0.1.9
